2004-04-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b35

	* Change: PHP5 error messages - these errors could have influenced
	  applet behavior due to their nature and location.

2004-04-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b34

	* Change: Extra checks to prevent people from Moving photos into the
	  album they're already in.

2004-04-11 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b33
	
	* Bugfix: #930007

2004-04-11 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b32

	* Bugfix: Added type to makeGalleryURL.
		  This gives the possibility not to load Environment in Popups.
		  This fixes broken Upload Frame Popup in Mambo.

	* Bugfix: Docs Link were broken.

	* Change: Layout Adjustments.

	* New: Gallery will use the Language corresponding to the Country Locale specified by Mambo.

	* New: Added little Gallery <-> Mambo integration HowTo.

2004-04-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b31

	* Fix: Fix unquoted array ref in rename_album.php

	* Bump: Version number from last change

2004-04-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b30

	* Bug 932911: Prevent ( and ) in album names
	  While these can be valid chars, they can cause processing
	  errors.

2004-04-10 Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b29

	* Bugfix: Prevent empty warning in locale section of step 1.

2004-04-10 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b28

	* Change: Improved improved warning.
	
	* New: Tweaked return of check_graphics(),
	       so we can disable watermark dir when composite and pnmcomp is missing.

	* Change: Beautified (HTML)Output of Configwizard Step1 warnings.

2004-04-10 Don Willingham <donwillingham@users.sf.net> 1.4.4-cvs-b27

	* Change: Improve missing binary warning messages.

2004-04-09 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b26

	* Bugfix: Commit of changed util.php and lib/Form.php. (Forgotten in b21)

2004-04-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b25
