@@ -62,7 +62,7 @@ if($gallery->app->debug == "no") {
  * Gallery remote protocol version 2.10
  */
 $GR_VER['MAJ'] = 2;
-$GR_VER['MIN'] = 13;
+$GR_VER['MIN'] = 14;
 
 
 /*
@@ -408,15 +408,20 @@ function gr_fetch_album_images( &$gallery, &$response, $albums_too ) {
 	$tmpImageNum = 0;
 	
 	if (isset($gallery->album)) {
+		$includeFullSize = $gallery->user->canViewFullImages($gallery->album);
+
 		foreach($gallery->album->photos as $albumItemObj) {
 			if(!$albumItemObj->isAlbum()) { //Make sure this object is a picture, not an album
 				$tmpImageNum++;
-	 
-				$response->setProperty( 'image.name.'.$tmpImageNum, $albumItemObj->image->name.'.'.$albumItemObj->image->type );
-				$fullSize = $albumItemObj->getDimensions(1);
-				$response->setProperty( 'image.raw_width.'.$tmpImageNum, $fullSize[0] );
-				$response->setProperty( 'image.raw_height.'.$tmpImageNum, $fullSize[1] );
-	
+
+	 			if ($includeFullSize) {
+					$response->setProperty( 'image.name.'.$tmpImageNum, $albumItemObj->image->name.'.'.$albumItemObj->image->type );
+					$fullSize = $albumItemObj->getDimensions(1);
+					$response->setProperty( 'image.raw_width.'.$tmpImageNum, $fullSize[0] );
+					$response->setProperty( 'image.raw_height.'.$tmpImageNum, $fullSize[1] );
+					$response->setProperty( 'image.raw_filesize.'.$tmpImageNum, $albumItemObj->getFileSize(1) );
+				}
+
 				if ($albumItemObj->isResized()) {
 					$response->setProperty( 'image.resizedName.'.$tmpImageNum, $albumItemObj->image->resizedName.'.'.$albumItemObj->image->type );
 					$resizedSize = $albumItemObj->getDimensions(0);
@@ -429,7 +434,6 @@ function gr_fetch_album_images( &$gallery, &$response, $albums_too ) {
 				$response->setProperty( 'image.thumb_width.'.$tmpImageNum, $thumbnailSize[0] );
 				$response->setProperty( 'image.thumb_height.'.$tmpImageNum, $thumbnailSize[1] );
 	
-				$response->setProperty( 'image.raw_filesize.'.$tmpImageNum, $albumItemObj->getFileSize(1) );
 				$response->setProperty( 'image.caption.'.$tmpImageNum, $albumItemObj->caption );
 				if(count($albumItemObj->extraFields)) { //if there are extra fields for this image
 					foreach($albumItemObj->extraFields as $extraFieldKey => $extraFieldName) {
@@ -445,11 +449,20 @@ function gr_fetch_album_images( &$gallery, &$response, $albums_too ) {
 				$response->setProperty( 'image.capturedate.hours.'.$tmpImageNum, $albumItemObj->itemCaptureDate['hours'] );
 				$response->setProperty( 'image.capturedate.minutes.'.$tmpImageNum, $albumItemObj->itemCaptureDate['minutes'] );
 				$response->setProperty( 'image.capturedate.seconds.'.$tmpImageNum, $albumItemObj->itemCaptureDate['seconds'] );
+				$response->setProperty( 'image.hidden.'.$tmpImageNum, $albumItemObj->isHidden()?"yes":"no" );
 			} else {
 				if ($albums_too) {
-				    $tmpImageNum++;
-	 
-					$response->setProperty( 'album.name.'.$tmpImageNum, $albumItemObj->getAlbumName() );
+					if (! isset($albumDB)) {
+						$albumDB = new AlbumDB(FALSE);
+					}
+
+					$myAlbum = $albumDB->getAlbumByName($albumItemObj->getAlbumName(), FALSE);
+
+					if ($gallery->user->canReadAlbum($myAlbum)) {
+						$tmpImageNum++;
+
+						$response->setProperty( 'album.name.'.$tmpImageNum, $albumItemObj->getAlbumName() );
+					}
 				}
 			}
 		}
@@ -458,7 +471,7 @@ function gr_fetch_album_images( &$gallery, &$response, $albums_too ) {
 		if ($albums_too) {
 			$albumDB = new AlbumDB(FALSE);
 			foreach ($albumDB->albumList as $myAlbum) {
-				if ($myAlbum->isRoot()) {
+				if ($myAlbum->isRoot() && $gallery->user->canReadAlbum($myAlbum)) {
 				    $tmpImageNum++;
 		 
 					$response->setProperty( 'album.name.'.$tmpImageNum, $myAlbum->fields['name'] );
